增加兼容使用设备编号
1. 设备接口的改为：优先按内部 id 查，查不到再按 设备编号（device_id） 查
2. 通道接口改为：新增需要传入设备编号（device_id）和通道号（channel_id）的接口
